------------------------------------------------------------------------
0.02 | Piotr Roszatycki <dexter@cpan.org> | 2009-04-17

Changes:

* Method "create_mock_anon_class" accepts "role" argument.
* Function "mock_anon_class" has optional argument.

------------------------------------------------------------------------
0.0102 | Piotr Roszatycki <dexter@cpan.org> | 2009-04-16

Fixes:

* Requires Class::Inspector.
* This module is under LGPL only.

------------------------------------------------------------------------
0.0101 | Piotr Roszatycki <dexter@cpan.org> | 2009-04-15

Fixes:

* Requires namespace::clean and Test::Assert 0.05.

------------------------------------------------------------------------
0.01 | Piotr Roszatycki <dexter@cpan.org> | 2009-04-14

* First CPAN release.

------------------------------------------------------------------------