@@ -5,6 +5,7 @@ Changes:
 
 * Method "create_mock_anon_class" accepts "role" argument.
 * Function "mock_anon_class" has optional argument.
+* Mock class reapplies roles of original class.
 
 ------------------------------------------------------------------------
 0.0102 | Piotr Roszatycki <dexter@cpan.org> | 2009-04-16
